fixed spacing to left of student list

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -17,22 +17,23 @@ div.app {
 		border-right: solid 1px;
 		padding: 1em;
 
-		button.refresh-students{
+		button.refresh-students {
 			margin: 0.5em 0;
 			cursor: pointer;
 		}
 
-		input[type=checkbox]{
+		input[type="checkbox"] {
 			cursor: pointer;
 		}
 
-		ul.student-list{
+		ul.student-list {
 			color: #333;
+			padding: 0;
 		}
 	}
 
-	ul.puzzle-display{
-		div.student-name{
+	ul.puzzle-display {
+		div.student-name {
 			font-size: 1.5em;
 			text-decoration: underline;
 		}
